WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142517
Assertion in ScrollController::processWheelEventForScrollSnapOnAxis when scrolling with mechanical wheel mouse
https://bugs.webkit.org/show_bug.cgi?id=142517
Summary
Assertion in ScrollController::processWheelEventForScrollSnapOnAxis when scro...
Brent Fulgham
Reported
2015-03-09 17:32:50 PDT
In
Bug 141973
(<
https://trac.webkit.org/changeset/180987
>) I introduced a regression for mechanical wheel mice users. After my change, WebKit always creates a snap scroll animation state context, which triggers new scroll snap point logic when processing wheel events. If you work with a mechanical wheel mouse, the scroll snap point handler does not understand the gesture (since mechanical mice only produce "stateless" wheel events), and complains via an assertion.
Attachments
Patch
(1.96 KB, patch)
2015-03-09 17:38 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(3.29 KB, patch)
2015-03-09 17:47 PDT
,
Brent Fulgham
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-03-09 17:33:17 PDT
<
rdar://problem/20088167
>
Brent Fulgham
Comment 2
2015-03-09 17:35:35 PDT
Note: additional work for mechanical wheel mice is being done under
Bug 142501
.
Brent Fulgham
Comment 3
2015-03-09 17:38:09 PDT
Created
attachment 248301
[details]
Patch
Brent Fulgham
Comment 4
2015-03-09 17:47:16 PDT
Created
attachment 248302
[details]
Patch
Brent Fulgham
Comment 5
2015-03-09 18:00:41 PDT
Committed
r181300
: <
http://trac.webkit.org/changeset/181300
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug