Assertion in ScrollController::processWheelEventForScrollSnapOnAxis when scrolling with mechanical wheel mouse https://bugs.webkit.org/show_bug.cgi?id=142517

Reviewed by Simon Fraser.

* platform/cocoa/ScrollController.mm:
(WebCore::toWheelEventStatus): Recognize stateless mechanical wheel events.
(WebCore::ScrollController::processWheelEventForScrollSnapOnAxis): If a mechanical wheel event is processed while
considering scroll snap logic, end any snap animations and clean up.
(WebCore::ScrollController::updateScrollSnapPoints): Don't begin tracking scroll snap state if there is not
scroll snap point defined in the markup.


Canonical link: https://commits.webkit.org/160548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181300 268f45cc-cd09-0410-ab3c-d52691b4dbfc